Обновленные данные с историей
